# ekf_attitude_estimator

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
inc/: AttitudeEstimator.hpp  GyroProcessModel.hpp  Helper.hpp  KalmanFilter.hpp  MeasurementModel.hpp  ProcessModel.hpp  Quaternion.hpp  QuestMeasurementModel.hpp  State.hpp
src/: AttitudeEstimator.cpp  KalmanFilter.cpp  Quaternion.cpp  main.cpp
